CHanges for SPECPROC-9 - Add sub-section on time and worker availability to Background section.
Changes for SPECPROC-10 - Add BLOCKING_GROUP and BLOCKING_BRANCH classes.

--- a/docs/UML/class_index.adoc
+++ b/docs/UML/class_index.adoc
@@ -12,6 +12,10 @@
 [.xcode]
 * http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_api_call_class[API_CALL]
 [.xcode]
+* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_blocking_branch_class[BLOCKING_BRANCH]
+[.xcode]
+* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_blocking_group_class[BLOCKING_GROUP]
+[.xcode]
 * http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_boolean_context_expression_class[BOOLEAN_CONTEXT_EXPRESSION]
 [.xcode]
 * http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_calendar_entry_class[CALENDAR_ENTRY]
