--- a/docs/UML/classes/event_record.adoc
+++ b/docs/UML/classes/event_record.adoc
@@ -13,7 +13,7 @@ h|*Attributes*
 ^h|*Meaning*
 
 h|*1..1*
-|*time*: `Date_time`
+|*time*: `Iso8601_date_time`
 a|Time the event occurred.
 
 h|*0..1*
