--- a/docs/UML/classes/adhoc_branch.adoc
+++ b/docs/UML/classes/adhoc_branch.adoc
@@ -6,9 +6,9 @@ h|*Class*
 2+^h|*ADHOC_BRANCH*
 
 h|*Description*
-2+a|
+2+a|A specialised kind of `TASK_GROUP` representing a branch in an Ad Hoc Group.
 
 h|*Inherit*
-2+|`CHOICE_BRANCH`
+2+|`BLOCKING_BRANCH`
 
 |===
