--- a/docs/UML/classes/event_action.adoc
+++ b/docs/UML/classes/event_action.adoc
@@ -23,4 +23,8 @@ a|Optional message to display to original Task context (i.e. application, form e
 h|*0..1*
 |*resume_action*: `RESUME_ACTION`
 a|Optional resume action, used when the intention is to resume in a different location than the default (i.e. next available Task).
+
+h|*0..1*
+|*receiver_task_next_state*: `TASK_LIFECYCLE`
+a|Next state of the receiver Task of this callback notification. If not set, default processing will be performed.
 |===
