--- a/docs/UML/classes/event_group.adoc
+++ b/docs/UML/classes/event_group.adoc
@@ -9,15 +9,11 @@ h|*Description*
 2+a|Special kind of Task Group whose members are `EVENT_BRANCH` instances each representing a mutually exclusive Event Wait, the first of which occurs determines the execution path.
 
 h|*Inherit*
-2+|`CHOICE_GROUP`
+2+|`BLOCKING_GROUP`
 
 h|*Attributes*
 ^h|*Signature*
 ^h|*Meaning*
-
-h|*0..1*
-|*timeout*: `TIMER_WAIT`
-a|Timer to start on entry into Event Group. If no events are received within this time, a branch with a Timer Expiry event type can be entered. If no such branch is defined, the Timer Expiry may be used to display a message to the performer.
 
 h|*0..1 +
 (redefined)*
